test/spec_vectors/simd_i8x16_sat_arith/fail/module_18.wat
(module (func $i8x16.add_sat_s-arg-empty (result v128) (i8x16.add_sat_s)))